{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Unit",
            "id": "e91e3c41-35c8-47c6-81d6-7fa63e818559",
            "actions": [
                {
                    "name": "Vertical",
                    "type": "Button",
                    "id": "e5e863fd-d9ab-489f-af35-8087426311d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "d51b0bde-7983-4592-a11c-7ad306cff597",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainAction",
                    "type": "Button",
                    "id": "713f429d-9401-4cab-9120-6566b4787265",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AdditionalAction",
                    "type": "Button",
                    "id": "2f4ebf1d-1b06-43af-9fa9-e9d7b8cab813",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockTarget",
                    "type": "Button",
                    "id": "3bd42b18-2237-467b-a03a-100aaccb1434",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WS",
                    "id": "5b5c1e0f-f90a-46b4-b97c-4cb1fe955b72",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7d4f4d49-48f1-430d-90fe-3f77589d8115",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6366599b-327b-4db3-9d1b-41f21e510904",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "763d7497-d6ae-4f79-b989-5b248662ee67",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4f85a897-52ca-4243-8445-4b059de264d8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "35122ecc-6d1c-46d8-bcac-65db9cb5de1c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "302c8ea0-606c-44a3-80a7-a3e5f47223b6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8446ee3f-9a67-46ba-a76b-c68434440762",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdditionalAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78ca52f6-8392-4f42-bded-2b4811d3b3c3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "61e0951e-9d8d-4221-8fb9-7b15bd1de911",
            "actions": [
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "9a24412b-0d61-4c6e-9633-2af997c7be7e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1e1a09e-4d27-487b-85e6-54e6f9f789e3",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}